<resources>
    <string name="app_name">In\'Secure</string>
    <string name="title_map">Carte</string>
    <string name="title_directions">Trajets</string>
    <string name="title_group">Groupe</string>
    <string name="title_activity_trajet">Rechercher un trajet</string>
    <string name="title_activity_creer_trajet">Créer un trajet</string>
    <string name="logout">Déconnexion</string>
    <string name="about">A propos...</string>
    <string name="alert_button">Signaler un danger</string>
    <string name="startDirection">Départ :</string>
    <string name="endDirection">Arrivée :</string>
    <string name="nbPerson">Nombre de participants :</string>
    <string name="title_activity_login">Connection</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="loginButton">Connexion</string>
    <string name="privatelife"><u>Données et vie privée</u></string>
    <string name="contact"><u>Nous contacter</u></string>
    <string-array name="digits">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5+</item>
    </string-array>
</resources>
